--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "001e0507",
    "metadata": {},
    "outputs": [
@@ -26,13 +26,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World!\n"
+      "Xin chào\n",
+      "Tôi tên là Nguyễn Đăng Khoa\n",
+      "Tôi đến từ Bến Tre\n"
      ]
     }
    ],
    "source": [
     "# Code lab 1 bài 1 ở đây\n",
-    "print(\"Hello, World!\")"
+    "print(\"Xin chào\")\n",
+    "print(\"Tôi tên là Nguyễn Đăng Khoa\")\n",
+    "print(\"Tôi đến từ Bến Tre\")"
    ]
   },
   {
@@ -45,12 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chu vi hình chữ nhật là: 26.0\n",
+      "Diện tích hình chữ nhật là: 42.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 1  bài 2 ở đây"
+    "# Code lab 1  bài 2 ở đây\n",
+    "Chieudai = float(input(\"Nhập chiều dài hình chữ nhật: \"))\n",
+    "Chieurong = float(input(\"Nhập chiều rộng hình chữ nhật: \"))\n",
+    "Chuvi = (Chieudai + Chieurong) * 2\n",
+    "Dientich = Chieudai * Chieurong\n",
+    "print(\"Chu vi hình chữ nhật là:\", Chuvi)\n",
+    "print(\"Diện tích hình chữ nhật là:\", Dientich)"
    ]
   },
   {
@@ -63,12 +82,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7034990b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...\n",
+      "Sống khôngông giận,không hờn không oán trách\n",
+      "Sống mỉm cười, với thử thách chông gai\n",
+      "Sống vươn lên,theo kịp ánh ban maimai\n",
+      "Sống chan hòa, với những người chung sống. \n",
+      "\n",
+      "Sống là động, nhưng lòng luôn bất độngđộng\n",
+      "Sống là thương, nhưng lòng chẳn vấn vương\n",
+      "Sống yên vui, danh lợi mãi coi thườngthường\n",
+      "Tâm bất biến, giữa dòng đời vạn biển. \n",
+      "...\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 1  bài 3 ở đây"
+    "print(\"...\" \\\n",
+    "\"\")\n",
+    "print(\"Sống khôngông giận,không hờn không oán trách\")\n",
+    "print(\"Sống mỉm cười, với thử thách chông gai\")\n",
+    "print(\"Sống vươn lên,theo kịp ánh ban maimai\")\n",
+    "print(\"Sống chan hòa, với những người chung sống. \")\n",
+    "print()\n",
+    "print(\"Sống là động, nhưng lòng luôn bất độngđộng\")\n",
+    "print(\"Sống là thương, nhưng lòng chẳn vấn vương\")\n",
+    "print(\"Sống yên vui, danh lợi mãi coi thườngthường\")\n",
+    "print(\"Tâm bất biến, giữa dòng đời vạn biển. \")\n",
+    "print(\"...\" \\\n",
+    "\"\")"
    ]
   },
   {
@@ -81,12 +130,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "phương trình vô nghiệm\n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 1 bài 4 ở đây"
+    "# code lab 1 bài 4 ở đây\n",
+    "import math\n",
+    "a = float(input(\"Nhập hệ số a: \"))\n",
+    "b = float(input(\"Nhập hệ số b: \"))\n",
+    "c = float(input(\"Nhập hệ số c: \"))\n",
+    "delta=b**2-4*a*c\n",
+    "if delta >= 0:\n",
+    "\tx1 = (-b + math.sqrt(delta)) / (2*a)\n",
+    "\tx2 = (-b - math.sqrt(delta)) / (2*a)\n",
+    "\tprint(f\"Nghiệm x1 = {x1}, x2 = {x2}\")\n",
+    "else:\n",
+    "\tprint(\"phương trình vô nghiệm\")"
    ]
   },
   {
