--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7034990b",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "phương trình vô nghiệm\n"
+      "Nghiệm x1 = -0.5, x2 = -1.0\n"
      ]
     }
    ],
