--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -18,12 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "001e0507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Từ bạn tìm kiếm là:  thanh thản\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 2 bài 1 ở đây"
+    "# Code Lab 2 bài 1 ở đây\n",
+    "Baitho = '''Kiếp con người mong manh như là gió\n",
+    "Sống trên đời có được mấy lần vui\n",
+    "Sao phải đau mà không thể mỉm cười\n",
+    "Gắng buông nỗi ngậm ngùi nơi quá khứ\n",
+    "\n",
+    "Nếu có thể sao ta không làm thử\n",
+    "Để tâm hồn khác hai chữ an bần\n",
+    "Cho đôi chân bước thanh thản nhẹ nhàng\n",
+    "Dù hướng đời có muôn ngàn đá sỏi'''\n",
+    "\n",
+    "#timkiem = \"con người\" in Baitho\n",
+    "#print(\"Con người trong bài thơ không? \", timkiem)\n",
+    "#index1 = Baitho.find(\"con người\") # tìm vị trí \"con người\"\n",
+    "#index2 = index1 + len(\"con người\")\n",
+    "#tu_timkiem = Baitho[index1: index2]\n",
+    "\n",
+    "tu_tim_kiem = input(\"Nhập từ bạn muốn tìm kiếm trong bài thơ: \")\n",
+    "index1 = Baitho.find(tu_tim_kiem)\n",
+    "index2 = index1 + len(tu_tim_kiem)\n",
+    "tu_tim_kiem = Baitho[index1: index2]\n",
+    "print(\"Từ bạn tìm kiếm là: \", tu_tim_kiem)"
    ]
   },
   {
@@ -106,8 +135,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
