--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "001e0507",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Từ bạn tìm kiếm là:  thanh thản\n"
+      "Từ bạn tìm kiếm là:  \n",
+      "CON NGƯỜI\n"
      ]
     }
    ],
@@ -38,7 +39,7 @@
     "Gắng buông nỗi ngậm ngùi nơi quá khứ\n",
     "\n",
     "Nếu có thể sao ta không làm thử\n",
-    "Để tâm hồn khác hai chữ an bần\n",
+    "Để tâm hồn khác hai chữ bình an\n",
     "Cho đôi chân bước thanh thản nhẹ nhàng\n",
     "Dù hướng đời có muôn ngàn đá sỏi'''\n",
     "\n",
@@ -52,7 +53,11 @@
     "index1 = Baitho.find(tu_tim_kiem)\n",
     "index2 = index1 + len(tu_tim_kiem)\n",
     "tu_tim_kiem = Baitho[index1: index2]\n",
-    "print(\"Từ bạn tìm kiếm là: \", tu_tim_kiem)"
+    "print(\"Từ bạn tìm kiếm là: \", tu_tim_kiem)\n",
+    "\n",
+    "\n",
+    "text = \"con người\"\n",
+    "print(text.upper()) # in hoa\n"
    ]
   },
   {
@@ -65,12 +70,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...Kiếp con người mong manh như là gió\n",
+      "Sống trên đời có được mấy lần vui\n",
+      "Sao phải đau mà không thể mỉm cười\n",
+      "Gắng buông nỗi ngậm ngùi nơi quá khứ\n",
+      "\n",
+      "Nếu có thể sao ta không làm thử\n",
+      "Để tâm hồn khác hai chữ bình an\n",
+      "Cho đôi chân bước thanh thản nhẹ nhàng\n",
+      "Dù hướng đời có muôn ngàn đá sỏi...\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 2  bài 2 ở đây"
+    "# Code lab 2  bài 2 ở đây\n",
+    "Baitho = '''Kiếp con người mong manh như là gió\n",
+    "Sống trên đời có được mấy lần vui\n",
+    "Sao phải đau mà không thể mỉm cười\n",
+    "Gắng buông nỗi ngậm ngùi nơi quá khứ\n",
+    "\n",
+    "Nếu có thể sao ta không làm thử\n",
+    "Để tâm hồn khác hai chữ bình an\n",
+    "Cho đôi chân bước thanh thản nhẹ nhàng\n",
+    "Dù hướng đời có muôn ngàn đá sỏi'''\n",
+    "\n",
+    "# Thay thế từ bình an thành hạnh phúc\n",
+    "#tu_thay_the = Baitho.replace(\"bình an\", \"hạnh phúc\")\n",
+    "#print(tu_thay_the)\n",
+    "\n",
+    "them_dau = \"...\" + Baitho + \"...\"\n",
+    "print(them_dau)"
    ]
   },
   {
@@ -83,12 +120,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7034990b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nghiệm của phương trình là:  -1.1666666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 2  bài 3 ở đây"
+    "# Code lab 2  bài 3 ở đây\n",
+    "a = float(input(\"Nhập chuỗi a: \"))\n",
+    "b = float(input(\"Nhập chuỗi b: \"))\n",
+    "if a == 0:\n",
+    "    if b == 0:\n",
+    "        print(\"Thông báo vô số nghiệm\")\n",
+    "    else:\n",
+    "        print(\"Thông báo vô nghiệm\")\n",
+    "else:\n",
+    "    x = - b / a\n",
+    "    print(\"Nghiệm của phương trình là: \", x)"
    ]
   },
   {
@@ -101,12 +156,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phương trình có 2 nghiệm phân biệt:\n",
+      "Nghiệm thứ nhất x1 = -0.31010205144336445\n",
+      "Nghiệm thứ hai x2 = -1.2898979485566355\n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 2 bài 4 ở đây"
+    "import math\n",
+    "a = int(input(\"Nhập số a: \"))\n",
+    "b = int(input(\"Nhập số b: \")) \n",
+    "c = int(input(\"Nhập số c: \"))\n",
+    "delta = b**2 - 4*a*c   \n",
+    "if delta > 0:\n",
+    "    x1 = (-b + math.sqrt(delta)) / (2*a)\n",
+    "    x2 = (-b - math.sqrt(delta)) / (2*a)\n",
+    "    print(\"Phương trình có 2 nghiệm phân biệt:\")\n",
+    "    print(\"Nghiệm thứ nhất x1 =\", x1)\n",
+    "    print(\"Nghiệm thứ hai x2 =\", x2)\n",
+    "elif delta == 0:\n",
+    "    x = -b / (2*a)\n",
+    "    print(\"Phương trình có nghiệm kép:\")\n",
+    "    print(\"Nghiệm x =\", x)\n",
+    "else:\n",
+    "    print(\"Phương trình vô nghiệm\")\n"
    ]
   },
   {
