--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -19,11 +19,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bc0900b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "001e0507",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 4 bài 1 ở đây"
+    "# Code lab 4 bài 1 ở đây\n",
+    "def tinh_tien_nuoc(so_nuoc):\n",
+    "    gia_ban_nuoc = (7500, 8800, 12000, 24000)\n",
+    "    if so_nuoc <= 10 and so_nuoc >= 0:\n",
+    "        tien_nuoc_trong_thang = so_nuoc * gia_ban_nuoc[0]\n",
+    "    elif so_nuoc <= 20:\n",
+    "        tien_nuoc_trong_thang = (10 * gia_ban_nuoc[0]) + ((so_nuoc - 10) * gia_ban_nuoc[1])\n",
+    "    elif so_nuoc <= 30:\n",
+    "        tien_nuoc_trong_thang = (10 * gia_ban_nuoc [0]) + (10 * gia_ban_nuoc[1]) + ((so_nuoc - 20) * gia_ban_nuoc[2])\n",
+    "    elif so_nuoc > 30:\n",
+    "        tien_nuoc_trong_thang = (10 * gia_ban_nuoc [0]) + (10 * gia_ban_nuoc[1]) + (10 * gia_ban_nuoc[2]) + ((so_nuoc - 30) * gia_ban_nuoc[3])\n",
+    "    return tien_nuoc_trong_thang\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -36,12 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fa9cb39f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 4  bài 2 ở đây"
+    "# Code lab 4  bài 2 ở đây\n",
+    "def tinh_nguyen_lieu (sl_banh_dau_xanh, sl_banh_thap_cam, sl_banh_deo):\n",
+    "    banh_dau_xanh = {\"Duong\":0.04, \"Dau\":0.07}\n",
+    "    banh_thap_cam = {\"Duong\":0.06, \"Dau\":0}\n",
+    "    banh_deo = {\"Duong\":0.05, \"Dau\":0.02}\n",
+    "    nguyen_lieu_lam_banh = {}\n",
+    "    Duong_hop_banh = sl_banh_dau_xanh * banh_dau_xanh[\"Duong\"] + sl_banh_thap_cam * banh_thap_cam[\"Duong\"] + sl_banh_deo * banh_deo[\"Duong\"]\n",
+    "    Dau_hop_banh = sl_banh_dau_xanh * banh_dau_xanh[\"Dau\"] + sl_banh_thap_cam * banh_thap_cam[\"Dau\"] + sl_banh_deo * banh_deo[\"Dau\"]\n",
+    "    nguyen_lieu_lam_banh[\"Duong\"] = Duong_hop_banh\n",
+    "    nguyen_lieu_lam_banh[\"Dau\"] = Dau_hop_banh\n",
+    "    return nguyen_lieu_lam_banh\n",
+    "\n"
    ]
   },
   {
@@ -59,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 4  bài 3 ở đây"
+    "# Code lab 4  bài 3 ở đây\n"
    ]
   },
   {
@@ -106,8 +138,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
