nộp bài lab5 cau 1 2 3 4

--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -18,12 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "001e0507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tên sản phẩm: Bánh mì có giá 10000 và được giảm giá 20000\n",
+      "Sản phẩm Bánh mì có giá 10000 và được giảm giá 20000 và thuế nhập khẩu là 1000.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 5 bài 1 ở đây"
+    "# Code lab 5 bài 1 ở đây\n",
+    "class Sanpham: \n",
+    "    def __init__(self, ten_san_pham, gia, giam_gia):\n",
+    "        self.ten_san_pham = ten_san_pham\n",
+    "        self.gia = gia\n",
+    "        self.__giam_gia = giam_gia\n",
+    "    def thue_nhap_khau(self):\n",
+    "        return self.gia * 0.1\n",
+    "    def nhap_thong_tin_sp(self):\n",
+    "        self.ten_san_pham = input(\"Nhập tên sản phẩm: \")\n",
+    "        self.gia = float(input(\"Nhập giá sản phẩm: \"))\n",
+    "        self.__giam_gia = float(input(\"giam gia: \"))\n",
+    "    def xuat_thong_tin_sp(self):\n",
+    "        print(f\"Tên sản phẩm: {self.ten_san_pham} có giá {self.gia} và được giảm giá {self.__giam_gia}\")\n",
+    "    def __str__(self):\n",
+    "        return f\"Sản phẩm {self.ten_san_pham} có giá {self.gia} và được giảm giá {self.__giam_gia} và thuế nhập khẩu là {self.thue_nhap_khau()}\"\n",
+    "sp1 = Sanpham(\"Bánh mì\", 10000, 20000)\n",
+    "sp1.xuat_thong_tin_sp()\n",
+    "print(sp1)\n"
    ]
   },
   {
@@ -39,9 +66,25 @@
    "execution_count": null,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tên sản phẩm: bánh mì có giá 20.0 và được giảm giá 2000\n",
+      "Tên sản phẩm: kgg có giá 1.0 và được giảm giá 2000\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 5  bài 2 ở đây"
+    "# Code lab 5  bài 2 ở đây\n",
+    "from sanpham import *\n",
+    "sp1 = Sanpham(\"\",\"\",\"\")\n",
+    "sp2 = Sanpham(\"\",\"\",\"\")\n",
+    "sp1.nhap_thong_tin_sp()\n",
+    "sp1.xuat_thong_tin_sp()\n",
+    "sp2.nhap_thong_tin_sp()\n",
+    "sp2.xuat_thong_tin_sp()"
    ]
   },
   {
@@ -59,7 +102,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 5  bài 3 ở đây"
+    "# Code lab 5  bài 3 ở đây\n",
+    "from sanpham import *\n",
+    "sp1 = Sanpham(\"\",\"\",\"\") \n",
+    "sp1.nhap_thong_tin_sp()\n",
+    "sp1.xuat_thong_tin_sp()"
    ]
   },
   {
@@ -72,12 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tên sản phẩm: laptop có giá 30000.0 và được giảm giá \n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 5 bài 4 ở đây"
+    "# code lab 5 bài 4 ở đây\n",
+    "from sanpham import *\n",
+    "sp1 = Sanpham(\"\",\"\",\"\")\n",
+    "sp1.nhap_thong_tin_sp()\n",
+    "sp1.xuat_thong_tin_sp()"
    ]
   },
   {
@@ -106,8 +165,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
