--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -91,7 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 4  bài 3 ở đây\n"
+    "# Code lab 4  bài 3 ở đây\n",
+    "số_nguyên = (input(\"Nhập số nguyên  n: \"))\n",
+    "n = int(số_nguyên)\n",
+    "số_nguyên = list(map(int, số_nguyên.split()))\n",
+    "số_chẵn = list(filter(lambda x: x % 2 == 0, số_nguyên))\n",
+    "print(\"Các số chẵn trong dãy là:\", số_chẵn)"
    ]
   },
   {
@@ -107,9 +112,38 @@
    "execution_count": null,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lab4'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# code lab 4 bài 4 ở đây\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlab4\u001b[39;00m;\n\u001b[32m      3\u001b[39m menu = {}\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'lab4'"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 4 bài 4 ở đây"
+    "# code lab 4 bài 4 ở đây\n",
+    "import lab4.ipynb:\n",
+    "menu = {\n",
+    "    \"1\" : \"Tính tiền nước sinh hoạt\",\n",
+    "    \"2\" : \"Tính nguyên liệu làm bánh\",\n",
+    "    \"3\" : \"Thoát\"\n",
+    "}\n",
+    "while True:\n",
+    "    print(\"-----Menu-----\")\n",
+    "    for k,v in menu.items():\n",
+    "        print(f\"{k}: {v}\")\n",
+    "    print(\"--------------\")\n",
+    "    lua_chon = input(\"Mời bạn chọn chức năng: \")\n",
+    "    if lua_chon == \"3\"\n",
+    "        print(\"Kết thúc chương trình\")\n",
+    "        break\n",
+    "    elif lua_chon == \"1\":\n",
+    "        \n"
    ]
   },
   {
