--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -18,12 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "001e0507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chiều dài: 4\n",
+      "Chiều rộng: 3\n",
+      "Chu vi: 14\n",
+      "Diện tích: 12\n",
+      "Hình vuông - Cạnh: 5\n",
+      "Chu vi: 20\n",
+      "Diện tích: 25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 6 bài 1 ở đây"
+    "# code lab 6 bai 1\n",
+    "from lab6 import ChuNhat, HinhVuong\n",
+    "cn1 = ChuNhat (4,3)\n",
+    "v = HinhVuong(5)\n",
+    "cn1.xuat()\n",
+    "v.xuat()"
    ]
   },
   {
@@ -106,8 +125,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
