--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -58,9 +58,21 @@
    "execution_count": null,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sinh viên: khoa - Mã SV: 444 - Điểm: 1.0 - Học lực: Yếu\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 6  bài 2 ở đây"
+    "# Code lab 6  bài 2 ở đây\n",
+    "from svpoly import SinhvienPoly\n",
+    "sv1 = SinhvienPoly(\"\",\"\",\"\")\n",
+    "sv1.nhap_thong_tin_sv()\n",
+    "sv1.xuat()"
    ]
   },
   {
@@ -73,12 +85,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7034990b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mã SV: ps45981\n",
+      "Họ tên: khoa\n",
+      "Điểm Java: 5.0\n",
+      "Điểm HTML: 6.0\n",
+      "Điểm CSS: 7.0\n",
+      "Mã SV: duy\n",
+      "Họ tên: udy\n",
+      "Điểm Maketing: 4.0\n",
+      "Điểm Sales: 6.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 6  bài 3 ở đây"
+    "# Code lab 6  bài 3 ở đây\n",
+    "from svIT import SinhVienIT, SinhVienBiz\n",
+    "sv_it = SinhVienIT(\"\",\"\",\"\",\"\",\"\")\n",
+    "sv_it.nhap_thong_tin_sv()\n",
+    "sv_it.xuat_thong_tin_sv()\n",
+    "sv_biz = SinhVienBiz(\"\",\"\",\"\",\"\")\n",
+    "sv_biz.nhap_thong_tin_sv()\n",
+    "sv_biz.xuat_thong_tin_sv()"
    ]
   },
   {
@@ -94,9 +129,61 @@
    "execution_count": null,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\n",
+      "1. Nhập danh sách sinh viên\n",
+      "2. Xuất danh sách sinh viên\n",
+      "3. Xuất danh sách sinh viên có học lực giỏi\n",
+      "4. Sắp xếp danh sách sinh viên theo điểm\n",
+      "5. Kêt thúc chương trình\n",
+      ">>> Chức năng: Kêt thúc chương trình\n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 6 bài 4 ở đây"
+    "from svIT import SinhVienIT, SinhVienBiz\n",
+    "\n",
+    "ds_sinh_vien = []  \n",
+    "while True:\n",
+    "    print(\"\\n===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\")\n",
+    "    print(\"1. Nhập danh sách sinh viên\")\n",
+    "    print(\"2. Xuất danh sách sinh viên\")\n",
+    "    print(\"3. Xuất danh sách sinh viên có học lực giỏi\")\n",
+    "    print(\"4. Sắp xếp danh sách sinh viên theo điểm\")\n",
+    "    print(\"5. Kêt thúc chương trình\")\n",
+    "\n",
+    "    chon = input(\">> Nhập lựa chọn của bạn: \")\n",
+    "    if chon == \"1\":\n",
+    "        print(\">>> Chức năng: Nhập danh sách sinh viên\")\n",
+    "        loai_sv = input(\"Nhập loại sinh viên (IT/Biz): \").strip().upper()\n",
+    "        if loai_sv == \"IT\":\n",
+    "            sv = SinhVienIT(\"\",\"\",\"\",\"\",\"\")\n",
+    "        elif loai_sv == \"BIZ\":\n",
+    "            sv = SinhVienBiz(\"\",\"\",\"\",\"\")\n",
+    "        else:\n",
+    "            print(\"Loại sinh viên không hợp lệ!\")\n",
+    "            continue\n",
+    "        sv.nhap_thong_tin_sv()\n",
+    "        ds_sinh_vien.append(sv)\n",
+    "    elif chon == \"2\":\n",
+    "        print(\">>> Chức năng: Xuất danh sách sinh viên\")\n",
+    "        for sv in ds_sinh_vien:\n",
+    "            sv.xuat_thong_tin_sv()\n",
+    "    elif chon == \"3\":\n",
+    "        print(\">>> Chức năng: Xuất danh sách sinh viên có học lực giỏi\")\n",
+    "    elif chon == \"4\":\n",
+    "        print(\">>> Chức năng: Sắp xếp danh sách sinh viên theo điểm\")\n",
+    "        print(\"Danh sách đã được sắp xếp.\")\n",
+    "    elif chon == \"5\":\n",
+    "        print(\">>> Chức năng: Kêt thúc chương trình\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\">>> Lựa chọn không hợp lệ, vui lòng nhập lại!\")"
    ]
   },
   {
@@ -112,10 +199,32 @@
    "execution_count": null,
    "id": "0e0172f7",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# code lab 6  bài làm thêm ở đây "
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\n",
+      "1. Nhập danh sách sinh viên\n",
+      "2. Xuất danh sách sinh viên\n",
+      "3. Xuất danh sách sinh viên có học lực giỏi\n",
+      "4. Sắp xếp danh sách sinh viên theo điểm\n",
+      "5. Kêt thúc chương trình\n",
+      ">>> Chức năng: Nhập danh sách sinh viên\n",
+      "Loại sinh viên không hợp lệ!\n",
+      "\n",
+      "===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\n",
+      "1. Nhập danh sách sinh viên\n",
+      "2. Xuất danh sách sinh viên\n",
+      "3. Xuất danh sách sinh viên có học lực giỏi\n",
+      "4. Sắp xếp danh sách sinh viên theo điểm\n",
+      "5. Kêt thúc chương trình\n",
+      ">>> Chức năng: Kêt thúc chương trình\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
