--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -134,6 +134,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\n",
+      "1. Nhập danh sách sinh viên\n",
+      "2. Xuất danh sách sinh viên\n",
+      "3. Xuất danh sách sinh viên có học lực giỏi\n",
+      "4. Sắp xếp danh sách sinh viên theo điểm\n",
+      "5. Kêt thúc chương trình\n",
+      ">>> Chức năng: Nhập danh sách sinh viên\n",
+      "\n",
+      "===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\n",
+      "1. Nhập danh sách sinh viên\n",
+      "2. Xuất danh sách sinh viên\n",
+      "3. Xuất danh sách sinh viên có học lực giỏi\n",
+      "4. Sắp xếp danh sách sinh viên theo điểm\n",
+      "5. Kêt thúc chương trình\n",
+      ">>> Chức năng: Xuất danh sách sinh viên\n",
+      "Mã SV: ps45981\n",
+      "Họ tên: khoa\n",
+      "Điểm Java: 6.0\n",
+      "Điểm HTML: 7.0\n",
+      "Điểm CSS: 8.0\n",
       "\n",
       "===== CHƯƠNG TRÌNH QUẢN LÝ SINH VIÊN =====\n",
       "1. Nhập danh sách sinh viên\n",
@@ -176,6 +197,9 @@
     "            sv.xuat_thong_tin_sv()\n",
     "    elif chon == \"3\":\n",
     "        print(\">>> Chức năng: Xuất danh sách sinh viên có học lực giỏi\")\n",
+    "        for sv in ds_sinh_vien:\n",
+    "         if sv.get_hoc_luc() == \"Giỏi\":\n",
+    "                sv.xuat_thong_tin_sv()\n",
     "    elif chon == \"4\":\n",
     "        print(\">>> Chức năng: Sắp xếp danh sách sinh viên theo điểm\")\n",
     "        print(\"Danh sách đã được sắp xếp.\")\n",
