--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -23,7 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 8 bài 1 ở đây"
+    "# Code lab 8 bài 1 ở đây\n",
+    "ho_ten = input(\"Nhập họ tên: \")\n",
+    "list_ho_ten = [tu for tu in ho_ten.split()]\n",
+    "print(list_ho_ten)\n",
+    "ten_dem = \"\"\n",
+    "for Phan_tu in list_ho_ten[1:-1]:\n",
+    "    ten_dem = ten_dem + Phan_tu\n",
+    "print(f'{list_ho_ten[0].upper()} {ten_dem} {list_ho_ten[-1].upper()}')"
    ]
   },
   {
@@ -41,7 +48,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 8  bài 2 ở đây"
+    "# Code lab 8  bài 2 ở đây\n",
+    "import re\n",
+    "sinh_vien = {\n",
+    "    \"Họ tên\" :\"\",\n",
+    "    \"Email\" : \"\",\n",
+    "    \"SĐT\" : \"\",\n",
+    "    \"cccd\": \"\"\n",
+    "\n",
+    "}\n",
+    "regex_email = r\"^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$\"\n",
+    "regex_sdt = r\"^[1-9]{1}[0-9]{8}$\"\n",
+    "regex_cccd = r\"^(00[1-9]|0[1-8][0-9]|09[0-6])[0-9][0-9]{2}[0-9]{6}$\" \n",
+    "\n",
+    "while True:\n",
+    "    email = input(\"Nhập email: \")\n",
+    "    if re.match(regex_email,email):\n",
+    "        print(\"Email hợp lệ.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Email không hợp lệ, vui lòng nhập lại.\")\n",
+    "\n",
+    "while True:\n",
+    "    sdt = input(\"Nhập SĐT: \")\n",
+    "    if re.match(regex_sdt,sdt):\n",
+    "        print(\"SĐT hợp lệ.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"SĐT không hợp lệ, vui lòng nhập lại.\")\n",
+    "\n",
+    "while True:\n",
+    "    cccd = input(\"Nhập CCCD: \")\n",
+    "    if re.match(regex_cccd,cccd):\n",
+    "        print(\"CCCD hợp lệ.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"CCCD không hợp lệ, vui lòng nhập lại.\")"
    ]
   },
   {
@@ -59,7 +101,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 8  bài 3 ở đây"
+    "# Code lab 8  bài 3 ở đây\n",
+    "import random\n",
+    "list_ngau_nhien = [random.randint(0,100) for _ in range(1000000)]\n",
+    "\n",
+    "with open(\"numbers.txt\",\"w\", encoding=\"utf-8\") as f:\n",
+    "    for i, so in enumerate(list_ngau_nhien):\n",
+    "        if i>0: \n",
+    "            f.write(\",\")\n",
+    "        f.write(str(so))\n",
+    "print(\"Đã ghi xong file numbers.txt\")"
    ]
   },
   {
@@ -107,7 +158,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
